# xmos_cmake_toolchain

./: .gitignore  CHANGELOG.rst  Jenkinsfile  README.md  requirements.txt  xmos_toolchain.cmake  xs2a.cmake  xs3a.cmake
test/: test_cmake_toolchain.py  test_lib_checks.py  tox.ini
test/test_app/: CMakeLists.txt  c.c  lowers.S  lowers.s  s.S  xc.xc
